--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
   font-size: 20px;
   font-family: "Nunito", sans-serif;
   overflow-x: hidden;
-  /* overflow-y: hidden; */
 }
 :root {
   --purple: #381b49;
@@ -27,13 +26,12 @@ body {
   --bs-gutter-x: 0px;
 }
 main {
-  min-width: 80vw;
-  max-width: 80vw;
   margin: 0px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 /* NAV */
 #nav {
   display: flex;
@@ -43,15 +41,14 @@ main {
   max-width: 100vw;
   min-height: 10vh;
   max-height: 10vh;
+  position: fixed;
 }
 .menu-icon {
   color: white;
   font-size: 40px;
   padding: 0px !important;
 }
-#nav > .container:first-child {
-  min-width: 80vw;
-  max-width: 80vw;
+#nav > .container {
   display: flex;
   align-items: center;
   margin: 0px auto;
@@ -71,34 +68,71 @@ main {
   width: 140px;
   font-weight: bold;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
-.nav-link {
+.nav-link,
+.navbar-brand:visited,
+.nav-link:visited {
   padding: 0px !important;
   color: white;
 }
-.navbar-brand:visited,
-.nav-link:visited {
-  color: white;
+#navbarNav .nav-item:last-child {
+  justify-content: flex-end;
 }
 
 /* INICIO */
-#home {
+#inicio {
   min-width: 100%;
   max-width: 100%;
 }
-#home > .container:first-child {
+#inicio > .container:first-child {
   min-width: 100%;
   min-height: 90vh;
   display: flex;
   align-items: center;
 }
-.btn-contact-container .btn:last-child {
+.landing-img {
+  max-width: 75%;
+}
+
+/* BUTTONS STYLES */
+.btn-style > ion-icon {
+  padding-left: 10px;
+  font-size: 24px;
+  color: white;
+}
+.btn-style {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--purple-light);
+  width: 200px;
+  height: 50px;
+  border: none;
+  border-radius: 4px;
+}
+.btn-style a,
+.btn-style span {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+}
+.btn-dark {
   margin-left: 5px;
   background-color: var(--black);
 }
-.landing-img {
-  max-width: 75%;
+
+.btn-style:hover {
+  border: 2px solid dashed;
+}
+
+/* TEXT FORMAT  */
+p {
+  text-align: justify;
+  font-size: 1.4rem;
 }
 h4 {
   font-size: 24px;
@@ -106,23 +140,17 @@ h4 {
 }
 
 /* ABOUT SECTION*/
-#about {
+#sobre {
   min-width: 100vw;
   min-height: 90vh;
   max-height: 90vh;
 }
-#about > .container:first-child {
-  min-width: 80vw;
-  max-width: 80vw;
-}
-#about button span,
-#home button span {
+#sobre button span,
+#inicio button span {
   padding-right: 10px;
 }
-.text-container p {
-  font-size: 1.1rem;
-}
-/* SKILLS SECTION */
+
+/* habilidades SECTION */
 #education {
   display: flex;
   flex-direction: column;
@@ -134,12 +162,10 @@ h4 {
   font-size: 18px;
   margin-bottom: 0.2rem;
 }
-
 #current-next {
   margin: 0px auto;
   text-align: center;
 }
-
 #current-next .col-12,
 #current-next .col-6 {
   display: flex;
@@ -153,7 +179,6 @@ h4 {
 .progress {
   min-height: 25px;
   max-height: 25px;
-  /* width: 60%; */
 }
 
 /* UTILS */
@@ -161,15 +186,16 @@ h4 {
   min-width: 100%;
   max-width: 100%;
 }
+.mw-80vw {
+  min-width: 80vw;
+  max-width: 80vw;
+}
 .rounder {
   width: 20px;
   height: 20px;
   background-color: var(--purple-light);
   border-radius: 50%;
   z-index: 20;
-}
-.border {
-  border: 2px solid red;
 }
 .line {
   width: 2px;
@@ -193,29 +219,17 @@ h4 {
   min-width: 80%;
   max-width: 80%;
 }
-
-.blue {
-  color: var(--blue-color);
-}
-
-.text-nunito {
-  font-family: "Nunito", sans-serif;
-}
-
 .text-regular-gray {
   color: var(--regular-gray);
 }
-
 .text-light-gray {
   color: var(--light-gray);
 }
-
 .fade {
   transform: translateY(150px);
   opacity: 0;
   transition: all 2s ease;
 }
-
 .fade.active {
   transform: translateY(0);
   opacity: 1;
@@ -232,73 +246,38 @@ h4 {
   margin: 0px auto;
   padding: 0px;
 }
-
-#social > i {
+#social > a {
+  display: flex;
   color: white;
   font-size: 35px;
-  padding: 0px 20px;
+  padding: 0px 10px;
 }
-
 #social > i:hover {
   cursor: pointer;
   color: var(--blueStrong-color);
 }
 
-/* BUTTONS */
-.btn-style {
-  background-color: var(--purple-light);
-  color: white;
-  margin-top: 3%;
-  width: 200px;
-  height: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn-style:hover {
-  background-color: var(--blueStrong-color);
-  color: white;
-}
-
-button > span {
-  font-size: 22px;
-}
-
-button > ion-icon {
-  padding-left: 10px;
-  font-size: 24px;
-}
-
 /* HABILIDADES */
-#skills {
+#habilidades {
   display: flex;
   justify-content: center;
   margin: 0px auto;
 }
-
-#skills > .container {
-  min-width: 80vw;
-  max-width: 80vw;
-}
-
-#skills button {
+#habilidades button {
   background-color: #202429;
   color: white;
 }
-
-#skills button i {
+#habilidades button i {
   padding-right: 10px;
 }
-
-/* PORTFOLIO */
-#myworks {
+.icon{
+  padding: 20px 0px;
+  max-width: 50px;
+}
+/* PROYECTOS */
+#proyectos {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  min-width: 80vw;
-  max-width: 80vw;
+  grid-template-columns: 1fr 1fr;
   gap: 50px;
   margin: 0px auto;
 }
@@ -312,6 +291,7 @@ button > ion-icon {
   box-shadow: 1px 1px 25px #202429;
   transition: all 500ms ease;
 }
+
 /* TOP DOWN BUTTON */
 #topBotButton {
   position: fixed;
@@ -326,9 +306,16 @@ button > ion-icon {
 }
 #topBotButton ion-icon {
   font-size: 48px;
-  padding: 20px;
-  color: var(--purple-light);
+  padding: 10px;
+  color: var(--purple);
 }
+#topBotButton ion-icon:hover {
+  border-radius: 50%;
+  background-color: var(--purple-light);
+  color: white;
+}
+
+/* FOOTER */
 #footer {
   min-width: 100vw;
   max-width: 100vw;
@@ -336,11 +323,9 @@ button > ion-icon {
   max-height: 10vh;
   background-color: var(--black);
   margin-top: 10vh;
+  z-index: 10;
 }
-
 #social {
-  min-width: 80vw;
-  max-width: 80vw;
   color: white;
 }
 #social ion-icon {
@@ -348,8 +333,27 @@ button > ion-icon {
   padding: 5px;
 }
 
-/* MEDIA QUERY */
-@media (max-width: 425px) {
+/* MEDIA QUERYS */
+@media (max-height: 600px) {
+  section {
+    margin-bottom: 5vh;
+  }
+  #sobre {
+    min-height: 100%;
+    max-height: 100%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 425px) {
+  .nav-link {
+    font-size: 1rem;
+  }
+  #navbarNav .nav-item:last-child {
+    justify-content: center;
+  }
+  p {
+    font-size: 1.1rem;
+  }
   #navbarNav {
     position: absolute;
     top: 10vh;
@@ -360,16 +364,29 @@ button > ion-icon {
     background-color: var(--purple-light);
     padding: 5px;
   }
+  .navbar-brand {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+  }
+  .menu-icon {
+    font-size: 26px;
+  }
   .nav-item {
     justify-content: center;
   }
-  .btn-contact-container .btn:last-child {
+  .btn-dark {
     margin: 10px 0px;
   }
-  #about {
-    margin-bottom: 20vh;
+  #sobre {
+    margin-bottom: 15vh;
+  }
+  #topBotButton ion-icon {
+    font-size: 24px;
+    padding: 0px;
   }
 }
+
 @media (max-width: 576px) {
   #navbarNav {
     position: absolute;
@@ -383,7 +400,7 @@ button > ion-icon {
     max-width: 100%;
     margin: 0px auto;
   }
-  #myworks {
+  #proyectos {
     grid-template-columns: 1fr;
   }
   .landing-img {
@@ -404,34 +421,22 @@ button > ion-icon {
     justify-content: space-around;
     padding: 5px;
   }
-  .landing-img {
-    display: none;
-  }
   .nav-item {
     justify-content: space-around;
   }
-
-  #myworks {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
+  p {
+    font-size: 1.2rem;
   }
   .landing-img {
-    display: block;
-    min-width: 100%;
+    display: none;
+  }
+  #proyectos {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
   }
 }
 
 @media (min-width: 769px) and (max-width: 992px) {
-  #navbarNav {
-    position: absolute;
-    min-width: 100vw;
-    max-width: 100vw;
-    top: 10vh;
-    left: 0px;
-  }
-  .nav-link {
-    color: white;
-  }
   .navbar-nav {
     min-width: 100vw;
     max-width: 100vw;
