Portfolio proyects portfolio updated

--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,9 @@ h4 {
 .text-right {
   text-align: right;
 }
+.text-left{
+  text-align:left;
+}
 .fade {
   transform: translateY(150px);
   opacity: 0;
