--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,6 @@ h4 {
 .proyectos-container {
   display: grid;
   margin: 0 auto;
-  /* border: 1px solid grey; */
 
 }
 .thumbnail {
@@ -353,7 +352,7 @@ h4 {
   color: white;
 }
 .btn-hover-disabled{
-  color: var(--purple);
+  color: var(white);
 }
 
 /* FOOTER */
@@ -511,6 +510,9 @@ h4 {
   .grid p{
     font-size: 1rem;
   }
+  .proyectos-container{
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 992px) {
@@ -526,6 +528,9 @@ h4 {
   .btn-dark {
     margin: 10px 10 0 0;
   }
+  .proyectos-container{
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media (min-width: 1024px) and (max-width:1919px){
@@ -539,6 +544,7 @@ h4 {
     width: 90%;
   }
   .proyectos-container{
+    grid-template-columns: 1fr 1fr;
     gap: 5px;
   }
   p{
@@ -555,5 +561,8 @@ h4 {
 @media(min-width:1920px){
   p{
     font-size: 1.6rem;
+  }
+  .proyectos-container{
+    grid-template-columns: 1fr 1fr;
   }
 }
